open-tofu/main.tf

locals {

  ssh_pub_key = file("../keys/aws.pem.pub")
  aws_user_data = <<EOF
#!/bin/bash

echo "Copying the SSH Key to the server"


echo -e "ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDiCDkRC+yyu80WDE2fimA7ilXEOkNELRjhJGhMfcHmd3I3C7cBow4pkJjhJrtiglcBHNuEAXuKZpTeogE/jdIEAnBY8MKyR9vqpbK4WllYN2zb6A043XMaF4JKIg77xZVXdl8i+AVsDUeI+zJN1gO8xL38pJ+XCdgxywwjjqesOSDYX/tjWz+g+HhkhjUOa6PWdSyG51Dt97KpP3S2ReH6A9prVJ9CbD/SOH5wc1kRMt9Odzul396x1lMww9xLfT2rgtm+RaLpccFU1N3pYQ7V0o/S8azKfUVdd1eu/YnyUCFrRovP7L5P3NCUHO8RHErp8HOmGznKq8LbIrCwmdSdDAu53aMPFkUiOP3GozsQkyHGeyGXnnLiA87oY1/G9k9f4uGGEauwrfrqWRHNCWAhASiHC69EIn3/d+vZffYJ4NKVC9bJrbCw/8d9GsGw9BD6qn2 [...]

EOF

}

resource "aws_security_group" "ingress-standard-us-east-2" {
    provider = aws.us-east-2
    name = "allow-all-sg"
    ingress {
        cidr_blocks = [
            "0.0.0.0/0"
        ]
        from_port = 22
        to_port = 22
        protocol = "tcp"
    }// Terraform removes the default rule
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
 }


resource "aws_security_group" "ingress-standard-us-west-2" {
    provider = aws.us-west-2
    name = "allow-all-sg"
    ingress {
        cidr_blocks = [
            "0.0.0.0/0"
        ]
        from_port = 22
        to_port = 22
        protocol = "tcp"
    }// Terraform removes the default rule
    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
 }



resource "aws_instance" "worker_us_east_2" {
  ami           = "ami-0f2c72ffadd336b5c"
  instance_type = "t2.small"
  user_data     = local.aws_user_data
  provider = aws.us-east-2
  security_groups = ["allow-all-sg"]
  tags = {
    Name = "USEast2"
  }
}


resource "aws_instance" "worker_us_west_2" {
  ami           = "ami-04c7330a29e61bbca"
  instance_type = "t2.small"
  user_data     = local.aws_user_data
  provider = aws.us-west-2
  security_groups = ["allow-all-sg"]
  tags = {
    Name = "USWest2"
  }
}
